this is my final upload

--- a/views/Creation.ejs
+++ b/views/Creation.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-  <form action="/Cnotes" method="POST">
+  <form action="/AddBooks" method="POST">
     
   <label for="titleinput">Title</label>
   <input type="text" id="titleinput" name="title">
@@ -17,9 +17,9 @@
   <label for="contentinput">Contents</label>
   <textarea name="contents" id="contentinput" cols="30" rows="10"></textarea>
 
-  <button type="submit">Create Note</button>
+  <button type="submit">Add comic</button>
 
   </form>
 
 </body>
-</html>
+</html> 
