--- a/views/ERPage.ejs
+++ b/views/ERPage.ejs
@@ -15,8 +15,8 @@
     
       <h2>Error 404 Page Cannot be Found</h2>
       
-      <a href="/notes">Back</a>
+      <a href="/ComicBooks">Back</a>
     
 
 </body>
-</html>
+</html> 
